@@ -34,7 +34,7 @@ Further features are display of EXIF tags, JPEG comments, EXIF rotation/orientat
 As a default,
 .B
 fim
-displays the specified file(s) on the detected, most convenient graphical device. This can be with SDL if running under X, an Ascii Art driver (aalib or libcaca) if running behind ssh without X forwarding, or the linux framebuffer device. Graphical file formats BMP, PCX are supported natively, while JPEG, PNG, GIF, TIFF, PPM, PGM, PBM, WEBP are supported via third party libraries. 
+displays the specified file(s) on the detected, most convenient graphical device. This can be with SDL if running under X, an Ascii Art driver (aalib or libcaca) if running behind ssh without X forwarding, or the linux framebuffer device. Graphical file formats BMP, PCX are supported natively, while JPEG, PNG, GIF, TIFF, PPM, PGM, PBM, AVIF, WEBP are supported via third party libraries. 
 Further formats are supported via external converters. 
 For XCF (Gimp's) images, will try to use 'xcftopnm'.
 For FIG vectorial images, will try to use 'fig2dev'.
@@ -325,7 +325,7 @@ Quiet execution mode. Sets _display_status=0;_display_busy=0;.
 Set resolution specification in pixels. Supported by SDL only. Will be appended to the argument to --output-device. Shorthand value 'fullscreen' will be translated into 'W'. 
 .TP
 \fB-R[{exp}]\fP, \fB--recursive[={exp}]\fP
-Push files/directories to the files list recursively. The expression in variable \fB_pushdir_re\fP (default: "\.(JPG|PNG|GIF|BMP|TIFF|TIF|JPEG|JFIF|PPM|PGM|PBM|PCX|WEBP)$") lists extensions of filenames which will be loaded in the list. You can overwrite its value by optionally passing an expression \fB{exp}\fP here as argument. If starting with '+' or '|', the expression following will be appended to it. 
+Push files/directories to the files list recursively. The expression in variable \fB_pushdir_re\fP (default: "\.(JPG|PNG|GIF|BMP|TIFF|TIF|JPEG|JFIF|PPM|PGM|PBM|PCX|AVIF|WEBP)$") lists extensions of filenames which will be loaded in the list. You can overwrite its value by optionally passing an expression \fB{exp}\fP here as argument. If starting with '+' or '|', the expression following will be appended to it. 
 .TP
 \fB-X\fP, \fB--no-pipe-load\fP
 Do not load via external converter programs: only use built-in file decoders.
