@@ -533,7 +533,7 @@ list 'markall': mark all the current list files.
 .fi
 list 'unmarkall': unmark all the marked files.
 .fi
-list 'pushdir' {dirname}: will push all the files in {dirname}, when matching the regular expression in variable _pushdir_re or, if empty, from constant regular expression '\.(JPG|PNG|GIF|BMP|TIFF|TIF|JPEG|JFIF|PPM|PGM|PBM|PCX|WEBP)$\:'.
+list 'pushdir' {dirname}: will push all the files in {dirname}, when matching the regular expression in variable _pushdir_re or, if empty, from constant regular expression '\.(JPG|PNG|GIF|BMP|TIFF|TIF|JPEG|JFIF|PPM|PGM|PBM|PCX|AVIF|WEBP)$\:'.
 .fi
 list 'pushdirr' {dirname}: like pushdir, but will also push encountered directory entries recursively.
 .fi
@@ -1236,7 +1236,7 @@ _push_pushes_dirs
 .na
 .B
 _pushdir_re
-[in] regular expression to match against when pushing files from a directory or an archive. By default this is "\.(JPG|PNG|GIF|BMP|TIFF|TIF|JPEG|JFIF|PPM|PGM|PBM|PCX|WEBP)$\:".
+[in] regular expression to match against when pushing files from a directory or an archive. By default this is "\.(JPG|PNG|GIF|BMP|TIFF|TIF|JPEG|JFIF|PPM|PGM|PBM|PCX|AVIF|WEBP)$\:".
 .fi
 .na
 .B
